--- a/LeetCode/120.triangle.md
+++ b/LeetCode/120.triangle.md
@@ -8,6 +8,8 @@ Example 1:
 
 ```js
 Input: triangle = [[2], [3,4], [6,5,7], [4,1,8,3]]
+2 3 6 1
+2 3 5 1
 Output: 11
 Explanation: The triangle looks like:
    2
@@ -57,6 +59,10 @@ Follow up: Could you do this using only O(n) extra space, where n is the total 
 0 0 1
 0 1 1
 0 1 2
+
+
+   2
+  3 4
 ```
 
 递归: 根据题意当前值的下标为 m, 则其上一个数的下标为 m - 1 或者 m。
@@ -67,24 +73,29 @@ Follow up: Could you do this using only O(n) extra space, where n is the total 
  * @return {number}
  */
 var minimumTotal = function(triangle) {
-  const result = getSmaller(triangle, 0, 0, 0)
-  return result
+  const cache = { smallest: Infinity }
+  getSmaller(triangle, 0, 0, 0, cache)
+  return cache.smallest
 }
 
 // m: witch row
 // n: witch column
-// curMin: current min value
-var getSmaller = function(triangle, m, n, curMin) {
-  if (m === triangle.length) {
-
+// result: current min value
+var getSmaller = function(triangle, m, n, result, cache) {
+  const sum = result + (triangle[m][n] ? triangle[m][n] : 0)
+  if (m === triangle.length - 1) {
+    cache.smallest = Math.min(cache.smallest, sum)
+    return
   }
 
-  const value1 = getSmaller(m + 1, n)
-  const value2 = getSmaller(m + 1, n + 1)
-
-  return value1 < value2 ? value1 : value2
+  getSmaller(triangle, m + 1, n, sum, cache)
+  getSmaller(triangle, m + 1, n + 1, sum, cache)
 }
 ```
+
+以 `triangle = [[2], [3,4], [6,5,7], [4,1,8,3]]` 为例, `getSmaller` 函数执行次数为 15。
+
+首先使用 `f(m, n) = Math.min(f(m + 1, n), f(m + 1, n + 1)) + triangle[m][n]` 优化代码精简代码如下
 
 todo:
 
@@ -94,10 +105,39 @@ todo:
  * @return {number}
  */
 var minimumTotal = function(triangle) {
-  for (let m = 0; m < triangle.length; m++) {
+  // const cache = { smallest: Infinity }
+  // getSmaller(triangle, 0, 0, 0, cache)
+  // return cache.smallest
+  return getSmaller(triangle, 0, 0, 0)
+}
 
+// m: witch row
+// n: witch column
+// result: current min value
+var getSmaller = function(triangle, m, n, prefix) {
+  // const sum = result + (triangle[m][n] ? triangle[m][n] : 0)
+  if (m === triangle.length - 1) {
+    // cache.smallest = Math.min(cache.smallest, sum)
+    return triangle[m][n]
   }
-  return result
+
+  const a = getSmaller(triangle, m + 1, n, sum, cache)
+  const b = getSmaller(triangle, m + 1, n + 1, sum, cache)
+  return (a < b ? a : b) + triangle[m][n]
+}
+```
+
+此时还是存在调用次数过多问题(待验证), 同时使用记忆化缓存
+
+todo: 从底向上
+
+```js
+/**
+ * @param {number[][]} triangle
+ * @return {number}
+ */
+var minimumTotal = function(triangle) {
+
 }
 ```
 
