--- a/LeetCode/120.triangle.md
+++ b/LeetCode/120.triangle.md
@@ -37,35 +37,12 @@ Follow up: Could you do this using only O(n) extra space, where n is the total 
 ### Analyze
 
 ```js
-0 0 0 0
-  1 1 1
-    2 2
-      3
-
-0 0 0 0
-0 0 0 1
-0 0 1 1
-0 0 1 2
-0 1 1 1
-0 1 1 2
-0 1 2 2
-0 1 2 3
-
-0 0 0
-  1 1
-    2
-
-0 0 0
-0 0 1
-0 1 1
-0 1 2
-
-
-   2
-  3 4
+2
+3 4
+6 5 7
 ```
 
-递归: 根据题意当前值的下标为 m, 则其上一个数的下标为 m - 1 或者 m。
+根据题意如果当前值的下标为 `(m, n)`, 则其下一个数的下标为 `(m + 1， n)` 或者 `(m + 1, n + 1)`。
 
 ```js
 /**
@@ -93,11 +70,9 @@ var getSmaller = function(triangle, m, n, result, cache) {
 }
 ```
 
-以 `triangle = [[2], [3,4], [6,5,7], [4,1,8,3]]` 为例, `getSmaller` 函数执行次数为 15。
+此时提交的时候执行时间超时, 开始优化!
 
-首先使用 `f(m, n) = Math.min(f(m + 1, n), f(m + 1, n + 1)) + triangle[m][n]` 优化代码精简代码如下
-
-todo:
+首先使用 `f(m, n) = Math.min(f(m + 1, n), f(m + 1, n + 1)) + triangle[m][n]` 优化代码精简代码如下:
 
 ```js
 /**
@@ -105,29 +80,59 @@ todo:
  * @return {number}
  */
 var minimumTotal = function(triangle) {
-  // const cache = { smallest: Infinity }
-  // getSmaller(triangle, 0, 0, 0, cache)
-  // return cache.smallest
-  return getSmaller(triangle, 0, 0, 0)
+  return getSmaller(triangle, 0, 0)
 }
 
 // m: witch row
 // n: witch column
-// result: current min value
-var getSmaller = function(triangle, m, n, prefix) {
-  // const sum = result + (triangle[m][n] ? triangle[m][n] : 0)
+var getSmaller = function(triangle, m, n) {
   if (m === triangle.length - 1) {
-    // cache.smallest = Math.min(cache.smallest, sum)
     return triangle[m][n]
   }
-
-  const a = getSmaller(triangle, m + 1, n, sum, cache)
-  const b = getSmaller(triangle, m + 1, n + 1, sum, cache)
+  const a = getSmaller(triangle, m + 1, n)
+  const b = getSmaller(triangle, m + 1, n + 1)
   return (a < b ? a : b) + triangle[m][n]
 }
 ```
 
-此时还是存在调用次数过多问题(待验证), 同时使用记忆化缓存
+以 `triangle = [[2], [3,4], [6,5,7]]` 为例, 当前 `getSmaller` 函数执行次数为 7。调用栈如下:
+
+```js
+value 2
+value 3
+value 6
+value 5 <-
+value 4
+value 5 <-
+value 7
+```
+
+此时可以发现箭头处有两处相同的调用, 故而可以使用缓存减少调用栈的次数。缓存优化如下:
+
+```js
+/**
+ * @param {number[][]} triangle
+ * @return {number}
+ */
+var minimumTotal = function(triangle) {
+  return getSmaller(triangle, 0, 0, {})
+}
+
+// m: witch row
+// n: witch column
+var getSmaller = function(triangle, m, n, cache) {
+  if (m === triangle.length - 1) {
+    return triangle[m][n]
+  }
+  const a = typeof cache[`${m + 1}_${n}`] === 'number'
+    ? cache[`${m + 1}_${n}`] : getSmaller(triangle, m + 1, n, cache)
+  const b = typeof cache[`${m + 1}_${n + 1}`] === 'number'
+    ? cache[`${m + 1}_${n + 1}`] : getSmaller(triangle, m + 1, n + 1, cache)
+  const result = (a < b ? a : b) + triangle[m][n]
+  cache[`${m}_${n}`] = result
+  return result
+}
+```
 
 todo: 从底向上
 
