--- a/LeetCode/120.triangle.md
+++ b/LeetCode/120.triangle.md
@@ -86,6 +86,7 @@ var minimumTotal = function(triangle) {
 // m: witch row
 // n: witch column
 var getSmaller = function(triangle, m, n) {
+  console.log('m', m, 'n', n)
   if (m === triangle.length - 1) {
     return triangle[m][n]
   }
@@ -121,15 +122,29 @@ var minimumTotal = function(triangle) {
 // m: witch row
 // n: witch column
 var getSmaller = function(triangle, m, n, cache) {
+  if (cache[`${m}_${n}`]) {
+    console.log('aaa', cache[`${m}_${n}`])
+    return cache[`${m}_${n}`]
+  }
+  // console.log('triangle', triangle[m][n], 'm', m, 'n', n)
   if (m === triangle.length - 1) {
     return triangle[m][n]
   }
-  const a = typeof cache[`${m + 1}_${n}`] === 'number'
-    ? cache[`${m + 1}_${n}`] : getSmaller(triangle, m + 1, n, cache)
-  const b = typeof cache[`${m + 1}_${n + 1}`] === 'number'
-    ? cache[`${m + 1}_${n + 1}`] : getSmaller(triangle, m + 1, n + 1, cache)
+  let a
+  if (typeof cache[`${m + 1}_${n}`] === 'number') {
+    a = cache[`${m + 1}_${n}`]
+  } else {
+    a = getSmaller(triangle, m + 1, n, cache)
+  }
+  let b
+  if (typeof cache[`${m + 1}_${n + 1}`] === 'number') {
+    b = cache[`${m + 1}_${n + 1}`]
+  } else {
+    b = getSmaller(triangle, m + 1, n + 1, cache)
+  }
   const result = (a < b ? a : b) + triangle[m][n]
   cache[`${m}_${n}`] = result
+
   return result
 }
 ```
