--- a/LeetCode/120.triangle.md
+++ b/LeetCode/120.triangle.md
@@ -40,6 +40,7 @@ Follow up: Could you do this using only O(n) extra space, where n is the total 
 2
 3 4
 6 5 7
+4 1 6 8
 ```
 
 根据题意如果当前值的下标为 `(m, n)`, 则其下一个数的下标为 `(m + 1， n)` 或者 `(m + 1, n + 1)`。
@@ -72,7 +73,7 @@ var getSmaller = function(triangle, m, n, result, cache) {
 
 此时提交的时候执行时间超时, 开始优化!
 
-首先使用 `f(m, n) = Math.min(f(m + 1, n), f(m + 1, n + 1)) + triangle[m][n]` 优化代码精简代码如下:
+首先使用 `f(m, n) = Math.min(f(m + 1, n), f(m + 1, n + 1)) + triangle[m][n]` 优化、精简代码如下:
 
 ```js
 /**
@@ -86,7 +87,7 @@ var minimumTotal = function(triangle) {
 // m: witch row
 // n: witch column
 var getSmaller = function(triangle, m, n) {
-  console.log('m', m, 'n', n)
+  console.log('m', m, 'n', n, 'triangle', triangle[m][n])
   if (m === triangle.length - 1) {
     return triangle[m][n]
   }
@@ -96,19 +97,34 @@ var getSmaller = function(triangle, m, n) {
 }
 ```
 
-以 `triangle = [[2], [3,4], [6,5,7]]` 为例, 当前 `getSmaller` 函数执行次数为 7。调用栈如下:
+以 `triangle = [[2], [3,4], [6,5,7], [4,1,8,3]]` 为例, 当前 `getSmaller` 函数执行次数为 15。调用栈如下:
 
 ```js
-value 2
-value 3
-value 6
-value 5 <-
-value 4
-value 5 <-
-value 7
+2
+3 4
+6 5 7
+4 1 8 3
+
+m 0 n 0 triangle 2
+m 1 n 0 triangle 3
+m 2 n 0 triangle 6
+m 3 n 0 triangle 4
+m 3 n 1 triangle 1
+m 2 n 1 triangle 5 <-
+m 3 n 1 triangle 1 <-
+m 3 n 2 triangle 8 <-
+m 1 n 1 triangle 4
+m 2 n 1 triangle 5 <-
+m 3 n 1 triangle 1 <-
+m 3 n 2 triangle 8 <-
+m 2 n 2 triangle 7
+m 3 n 2 triangle 8
+m 3 n 3 triangle 3
 ```
 
-此时可以发现箭头处有两处相同的调用, 故而可以使用缓存减少调用栈的次数。缓存优化如下:
+此时可以发现箭头处的调用是相似的, 故而可以使用缓存减少调用栈的次数。缓存优化如下:
+
+// todo: 提交验证
 
 ```js
 /**
@@ -122,34 +138,42 @@ var minimumTotal = function(triangle) {
 // m: witch row
 // n: witch column
 var getSmaller = function(triangle, m, n, cache) {
-  if (cache[`${m}_${n}`]) {
-    console.log('aaa', cache[`${m}_${n}`])
-    return cache[`${m}_${n}`]
-  }
-  // console.log('triangle', triangle[m][n], 'm', m, 'n', n)
+  console.log('m', m, 'n', n, 'triangle', triangle[m][n])
   if (m === triangle.length - 1) {
     return triangle[m][n]
   }
-  let a
-  if (typeof cache[`${m + 1}_${n}`] === 'number') {
-    a = cache[`${m + 1}_${n}`]
-  } else {
-    a = getSmaller(triangle, m + 1, n, cache)
-  }
-  let b
-  if (typeof cache[`${m + 1}_${n + 1}`] === 'number') {
-    b = cache[`${m + 1}_${n + 1}`]
-  } else {
-    b = getSmaller(triangle, m + 1, n + 1, cache)
-  }
+  const a = typeof cache[`${m + 1}_${n}`] === 'number'
+    ? cache[`${m + 1}_${n}`]
+    : getSmaller(triangle, m + 1, n, cache)
+  const b = typeof cache[`${m + 1}_${n + 1}`] === 'number'
+    ? cache[`${m + 1}_${n + 1}`]
+    : getSmaller(triangle, m + 1, n + 1, cache)
   const result = (a < b ? a : b) + triangle[m][n]
   cache[`${m}_${n}`] = result
-
   return result
 }
 ```
 
-todo: 从底向上
+执行优化后式子, 调用栈如下, 可以发现此前箭头处重复的调用现已缩小为一次。
+
+```js
+m 0 n 0 triangle 2
+m 1 n 0 triangle 3
+m 2 n 0 triangle 6
+m 3 n 0 triangle 4
+m 3 n 1 triangle 1
+m 2 n 1 triangle 5 <-
+m 3 n 1 triangle 1 <-
+m 3 n 2 triangle 8 <-
+m 1 n 1 triangle 4
+m 2 n 2 triangle 7
+m 3 n 2 triangle 8
+m 3 n 3 triangle 3
+```
+
+接着使用动态规划的思路来解题, 因为其递归方向为至底向上, 因此可以减少缓存记忆化的环节。
+
+大体思路是遍历 `triangle` 最后一行数据, 向上查找数据。取和为最小的那次数据。
 
 ```js
 /**
@@ -157,15 +181,8 @@ todo: 从底向上
  * @return {number}
  */
 var minimumTotal = function(triangle) {
+  for () {
 
+  }
 }
-```
-
-```js
-输入：
-[[-1],[2,3],[1,-1,-3]]
-输出：
-0
-预期：
--1
 ```
