--- a/LeetCode/120.triangle.md
+++ b/LeetCode/120.triangle.md
@@ -181,8 +181,18 @@ m 3 n 3 triangle 3
  * @return {number}
  */
 var minimumTotal = function(triangle) {
-  for () {
-
+  let result = Infinity
+  for (let n = 0; n < triangle[triangle.length - 1].length; n++) {
+    result = Math.min(getSmaller(triangle, triangle.length - 1, n), result)
   }
+  return result
+}
+
+var getSmaller = function(triangle, m, n) {
+  if (m === 0) return ...
+  const a = triangle[m - 1][n]
+  const b = triangle[m - 1][n - 1]
+
+  return a < b ? ... : ...
 }
 ```
