docs: apple skill

--- a/LeetCode/120.triangle.md
+++ b/LeetCode/120.triangle.md
@@ -124,8 +124,6 @@ m 3 n 3 triangle 3
 
 此时可以发现箭头处的调用是相似的, 故而可以使用缓存减少调用栈的次数。缓存优化如下:
 
-// todo: 提交验证
-
 ```js
 /**
  * @param {number[][]} triangle
@@ -189,10 +187,19 @@ var minimumTotal = function(triangle) {
 }
 
 var getSmaller = function(triangle, m, n) {
-  if (m === 0) return ...
-  const a = triangle[m - 1][n]
-  const b = triangle[m - 1][n - 1]
+  if (m === 0) return triangle[m][n]
 
-  return a < b ? ... : ...
+  if (triangle[m - 1][n - 1] === undefined) {
+    return getSmaller(triangle, m - 1, n) + triangle[m][n]
+  }
+  if (triangle[m - 1][n] === triangle[m - 1][n - 1]) {
+    const smallerA = getSmaller(triangle, m - 1, n) + triangle[m][n]
+    const smallerB = getSmaller(triangle, m - 1, n - 1) + triangle[m][n]
+    return smallerA < smallerB ? smallerA : smallerB
+  } else if (triangle[m - 1][n] < triangle[m - 1][n - 1]) {
+    return getSmaller(triangle, m - 1, n) + triangle[m][n]
+  } else (triangle[m - 1][n] > triangle[m - 1][n - 1]) {
+    return getSmaller(triangle, m - 1, n - 1) + triangle[m][n]
+  }
 }
 ```
