--- a/LeetCode/120.triangle.md
+++ b/LeetCode/120.triangle.md
@@ -97,7 +97,7 @@ var getSmaller = function(triangle, m, n) {
 }
 ```
 
-以 `triangle = [[2], [3,4], [6,5,7], [4,1,8,3]]` 为例, 当前 `getSmaller` 函数执行次数为 15。调用栈如下:
+以 `var triangle = [[2], [3,4], [6,5,7], [4,1,8,3]]` 为例, 当前 `getSmaller` 函数执行次数为 15。调用栈如下:
 
 ```js
 2
@@ -171,7 +171,7 @@ m 3 n 3 triangle 3
 
 接着使用动态规划的思路来解题, 因为其递归方向为至底向上, 因此可以减少缓存记忆化的环节。
 
-大体思路是遍历 `triangle` 最后一行数据, 向上查找数据。取和为最小的那次数据。
+思路为遍历 `triangle` 最后一行数据, 向上查找数据。取和为最小的那次数据。
 
 ```js
 /**
@@ -181,25 +181,27 @@ m 3 n 3 triangle 3
 var minimumTotal = function(triangle) {
   let result = Infinity
   for (let n = 0; n < triangle[triangle.length - 1].length; n++) {
-    result = Math.min(getSmaller(triangle, triangle.length - 1, n), result)
+    const value = getSmaller(triangle, triangle.length - 1, n)
+    result = Math.min(value, result)
   }
   return result
 }
 
 var getSmaller = function(triangle, m, n) {
-  if (m === 0) return triangle[m][n]
+  if (m === 0) {
+    return triangle[m][n]
+  }
 
+  const a = getSmaller(triangle, m - 1, n)
   if (triangle[m - 1][n - 1] === undefined) {
-    return getSmaller(triangle, m - 1, n) + triangle[m][n]
+    return a + triangle[m][n]
   }
-  if (triangle[m - 1][n] === triangle[m - 1][n - 1]) {
-    const smallerA = getSmaller(triangle, m - 1, n) + triangle[m][n]
-    const smallerB = getSmaller(triangle, m - 1, n - 1) + triangle[m][n]
-    return smallerA < smallerB ? smallerA : smallerB
-  } else if (triangle[m - 1][n] < triangle[m - 1][n - 1]) {
-    return getSmaller(triangle, m - 1, n) + triangle[m][n]
-  } else (triangle[m - 1][n] > triangle[m - 1][n - 1]) {
-    return getSmaller(triangle, m - 1, n - 1) + triangle[m][n]
-  }
+
+  const b = getSmaller(triangle, m - 1, n - 1)
+  return (a < b ? a : b) + triangle[m][n]
 }
 ```
+
+此时提交报`超时`, 如上解法已然是从下往上递归了呀, 难道这样子仍然没有满足动态规划思路么? 问题出在哪呢?
+
+todo:
