--- a/LeetCode/120.triangle.md
+++ b/LeetCode/120.triangle.md
@@ -204,4 +204,29 @@ var getSmaller = function(triangle, m, n) {
 
 此时提交报`超时`, 如上解法已然是从下往上递归了呀, 难道这样子仍然没有满足动态规划思路么? 问题出在哪呢?
 
-todo:
+参考社区上同学的题解, 动态规划本质是从下往上的递归, 相比从上往下的递归, 它节省的是重复函数栈调用的开销。值得注意的是, 它也`需要记忆化`, 故而上述代码会超时, 下面给出记忆化的代码片段:
+
+```js
+/**
+ * @param {number[][]} triangle
+ * @return {number}
+ */
+var minimumTotal = function(triangle) {
+  const arr = []
+  for (let m = triangle.length - 1; m >= 0; m--) {
+    for (let n = 0; n <= m; n++) {
+      if (!arr[m]) arr[m] = []
+      if (!arr[m + 1]) {
+        arr[m][n] = triangle[m][n]
+      } else {
+        arr[m][n] = Math.min(arr[m + 1][n], arr[m + 1][n + 1]) + triangle[m][n]
+      }
+    }
+  }
+  return arr[0][0]
+}
+```
+
+### 其它
+
+值得二刷
