--- a/LeetCode/64.Minimum_Path_Sum.md
+++ b/LeetCode/64.Minimum_Path_Sum.md
@@ -1,3 +1,40 @@
+### 64. Minimum Path Sum
+
+Given a m x n grid filled with `non-negative numbers`, find a path from top left to bottom right, which minimizes the sum of all numbers along its path.
+
+Note: You can only `move either down or right` at any point in time.
+
+Example 1:
+
+```js
+1 3 1
+1 5 1
+4 2 1
+
+Input: grid = [[1,3,1],[1,5,1],[4,2,1]]
+Output: 7
+Explanation: Because the path 1 → 3 → 1 → 1 → 1 minimizes the sum.
+```
+
+Example 2:
+
+```js
+1 2 3
+4 5 6
+
+Input: grid = [[1,2,3],[4,5,6]]
+Output: 12
+```
+
+* m == grid.length
+* n == grid[i].length
+* 1 <= m, n <= 200
+* 0 <= grid[i][j] <= 100
+
+### analyze
+
+动态规划一:
+
 ```js
 /**
  * @param {number[][]} grid
@@ -12,9 +49,6 @@ var minPathSum = function (grid) {
 
 function findMinCount(x, y, grid, cache) {
   if (cache[`${x}~${y}`]) {
-    if (x === 17) {
-      var test = null
-    }
     return cache[`${x}~${y}`]
   }
 
@@ -37,3 +71,36 @@ function findMinCount(x, y, grid, cache) {
   return count
 }
 ```
+
+动态规划二:
+
+```js
+/**
+ * @param {number[][]} grid
+ * @return {number}
+ */
+var minPathSum = function (grid) {
+  const mLength = grid.length
+  const nLength = grid[0].length
+  const cache = []
+  for (let m = mLength - 1; m >= 0; m--) {
+    for (let n = nLength - 1; n >= 0; n--) {
+      if (!cache[m]) cache[m] = []
+      if (m + 1 >= mLength && n + 1 >= nLength) {
+        cache[m][n] = grid[m][n]
+      } else if (m + 1 >= mLength) {
+        cache[m][n] = cache[m][n + 1] + grid[m][n]
+      } else if (n + 1 >= nLength) {
+        cache[m][n] = cache[m + 1][n] + grid[m][n]
+      } else {
+        cache[m][n] = Math.min(cache[m + 1][n], cache[m][n + 1]) + grid[m][n]
+      }
+    }
+  }
+  return cache[0][0]
+}
+```
+
+### Similar Title
+
+120
