--- a/BasicSkill/life/books/关键沟通.md
+++ b/BasicSkill/life/books/关键沟通.md
@@ -6,3 +6,9 @@
 * 原则二: `走出自我`, 投入对话, 让对话变得真实。
   * 生活中的问题很少与别人有关, 基本全部和自己有关。
 * 原则三: `保持专注`, 不分心。
+* 原则四: 今天就解决你最棘手的问题。
+  * 场景: 下属很有才华, 但为人太露锋芒, 该如何沟通?
+    * 误区开场白:
+      * 最近进展怎么样?
+      * 用恭维拉开对峙
+      * 信息表达太过委婉
