docs: how to improve en

--- a/LeetCode/343.Integer_Break.md
+++ b/LeetCode/343.Integer_Break.md
@@ -25,6 +25,8 @@ Explanation: 10 = 3 + 3 + 4, 3 × 3 × 4 = 36.
 
 ### Analyze
 
+n 可拆分为: `1 * integerBreak(n - 1)`、`2 * integerBreak(n - 2)` ...,  `x * integerBreak(n - x)`。直到 x 刚好大于等于 n - x 过。
+
 ```js
 /**
  * @param {number} n
