docs: firece conversation

--- a/BasicSkill/life/books/关键沟通.md
+++ b/BasicSkill/life/books/关键沟通.md
@@ -12,3 +12,14 @@
       * 最近进展怎么样?
       * 用恭维拉开对峙
       * 信息表达太过委婉
+      * 对话前为对方的话写剧本
+      * 咆哮与逃跑
+    * 练习开场白(时间控制在 1 分钟之内):
+      1. 界定问题
+      2. 选择一个具体例子, 阐述你想要改变的行为与情况
+      3. 描述你对这个问题的感受
+      4. 澄清其中的利害关系
+      5. 说明你对这个问题该负说明责任
+      6. 表明你解决这个问题的愿景
+      7. 邀请对方回应
+ * 原则五: 听从自己的直觉。
