--- a/LeetCode/343.Integer_Break.md
+++ b/LeetCode/343.Integer_Break.md
@@ -1,6 +1,6 @@
 ### 343. Integer Break
 
-Given an integer n, break it into the sum of k positive integers, where k >= 你2, and `maximize` the product of those integers.
+Given an integer n, break it into the sum of k positive integers, where k >= 2, and `maximize` the product of those integers.
 
 Return the maximum product you can get.
 
@@ -27,12 +27,44 @@ Explanation: 10 = 3 + 3 + 4, 3 × 3 × 4 = 36.
 
 n 可拆分为: `1 * integerBreak(n - 1)`、`2 * integerBreak(n - 2)` ...,  `x * integerBreak(n - x)`。直到 x 刚好大于等于 n - x 过。
 
+思路拆解(动态规划): 求 n === 2 时的最大累积, 求 n === 3 时的最大累积, 求 n === 4 时的最大累积, 依次类推...
+
+```js
+n === 2
+1 * 1
+
+n === 3
+1 * 2
+
+n === 4
+1 * 3
+2 * 2
+
+n === 5
+1 * 4
+2 * 3
+```
+
+
+
+
 ```js
 /**
  * @param {number} n
  * @return {number}
  */
 var integerBreak = function(n) {
+  // if (n === 1 || n === 2) return 1
 
-};
+  let result = 0
+  for (let i = 1; i < n; i++) {
+    if (i > n - i) return result
+    result = Math.max(result, i * integerBreak(n - i))
+  }
+  return result
+}
+```
+
+```js
+4 === 2 * 2 !== 1 * 1
 ```
