--- a/React/测试/测试之旅.md
+++ b/React/测试/测试之旅.md
@@ -3,4 +3,4 @@
 ### ssr 测试
 
 1. @testing-library 是不能用于在 server 端渲染的, 所以服务端渲染要用 enzyme 的 render 方法;
-2. ant-design 所有组件都会跑一份共同的服务端测试文件;https://github.com/ant-design/ant-design/blob/a754d9f60a565acf73c05a2ce78ecb827f621366/tests/shared/demoTest.ts;
+2. ant-design 所有组件都会跑一份共同的[服务端测试文件](https://github.com/ant-design/ant-design/blob/a754d9f60a565acf73c05a2ce78ecb827f621366/tests/shared/demoTest.ts)
