--- a/LeetCode/343.Integer_Break.md
+++ b/LeetCode/343.Integer_Break.md
@@ -25,27 +25,25 @@ Explanation: 10 = 3 + 3 + 4, 3 × 3 × 4 = 36.
 
 ### Analyze
 
-n 可拆分为: `1 * integerBreak(n - 1)`、`2 * integerBreak(n - 2)` ...,  `x * integerBreak(n - x)`。直到 x 刚好大于等于 n - x 过。
-
-思路拆解(动态规划): 求 n === 2 时的最大累积, 求 n === 3 时的最大累积, 求 n === 4 时的最大累积, 依此类推...
+n 拆分若干数后的乘积可拆分为: `1 * integerBreak(n - 1)`、`2 * integerBreak(n - 2)` ...,  `x * integerBreak(n - x)`。
 
 ```js
 n === 2
 1 * 1
 
 n === 3
-1 * 2
+1 * integerBreak(2)
 
 n === 4
-1 * 3
-2 * 2
+1 * integerBreak(3)
+2 * integerBreak(2)
 
 n === 5
-1 * 4
-2 * 3
+1 * integerBreak(4)
+2 * integerBreak(3)
 ```
 
-* 递归: 自顶向下
+* 递归思路(自顶向下)如下
 
 ```js
 /**
@@ -55,25 +53,42 @@ n === 5
 var cache = {}
 var integerBreak = function(n) {
   if (n === 1) return 1
+  if (cache[n]) return cache[n]
   let result = 0
+  // here the i means for the value to be subtracted
   for (let i = 1; i < n; i++) {
     if (i > n - i) {
-      return cache[n] = result
+      break
     }
-    if (cache[n]) {
-      result = Math.max(result, i * Math.max(cache[n], n - i))
-    } else {
-      result = Math.max(result, i * Math.max(integerBreak(n - i), n - i))
-    }
+    result = Math.max(result, i * Math.max(integerBreak(n - i), n - i))
   }
   return cache[n] = result
 }
 ```
 
+* 接着使用动态规划(自底向上)思路实现:
+
 ```js
-6
-输出
-16
-预期结果
-9
+/**
+ * @param {number} n
+ * @return {number}
+ */
+var cache = {
+  1: 1
+}
+var integerBreak = function(n) {
+  if (n === 1) return 1
+
+  let result = 0
+  // here the i means for the value to calc
+  for (let i = 2; i <= n; i++) {
+    // here the m means for the value to be subtracted
+    for (let m = 1; m < i; m++) {
+      result = Math.max(result, m * Math.max(cache[i - m], i - m))
+    }
+    cache[i] = result
+  }
+
+  return result
+}
 ```
