--- a/BasicSkill/life/books/关键沟通.md
+++ b/BasicSkill/life/books/关键沟通.md
@@ -1,5 +1,7 @@
 ### 关键沟通
 
+> 拷问现实, 真诚地表达自我, 给与他人纯粹的关注, 带着勇气与同理心对峙问题、听从直觉。
+
 * 原则一: 拿出勇气, `拷问现实`
   * 官方真相 & 战场真相, 要分析`战场真相`。
   * 成功的另一种定义: 我是什么样的人与我过着什么样的生活相一致的程度。
@@ -23,3 +25,5 @@
       6. 表明你解决这个问题的愿景
       7. 邀请对方回应
  * 原则五: 听从自己的直觉。
+   * 说话不是道出所知, 说话是弄清我到底知道什么。
+ * 原则六: 为自己的情绪尾迹承担责任
