docs: design book

--- a/LeetCode/91.Decode_Ways.md
+++ b/LeetCode/91.Decode_Ways.md
@@ -1,4 +1,4 @@
-### 90.Subsets II
+### 90.Decode Ways
 
 A message containing letters from A-Z can be encoded into numbers using the following mapping:
 
@@ -62,9 +62,15 @@ Constraints:
 ### Analyze
 
 * 567
-  * 5 6 7
+   * 5 6 7
   * 56 不满足
   * 5 67 不满足
+
+思路:
+
+* '226' 拆解
+  * 2 + '26' 的拆解之和
+  * 22 + '6' 的拆解之和
 
 ```js
 /**
@@ -72,19 +78,29 @@ Constraints:
  * @return {number}
  */
 var numDecodings = function(s) {
-  const obj = {
-    count: 0
-  }
-  judge(s, 0, , obj)
-  return obj.count
-};
+  return judge(s, 0)
+}
 
-var judge = function(s, start, obj) {
+var judge = function(s, start) {
   const length = s.length
-  if (start === s.length - 1) {
-    obj.count = obj.count + 1
-    return
+  if (start === s.length) {
+    return 0
   }
-  judge(s, start, obj)
+  let count = 0
+  if (s[start] && isValidValue(s[start])) {
+    count++
+  }
+  if (s[start + 1] && isValidValue(s.slice(start, start + 1))) {
+    count++
+  }
+
+  return count + judge(s, start + 1)
+}
+
+var isValidValue = function(value) {
+  const valueToNum = Number(value)
+  return valueToNum !== 0
+    && (value.length === String(valueToNum).length)
+    && valueToNum <= 26
 }
 ```
