--- a/LeetCode/91.Decode_Ways.md
+++ b/LeetCode/91.Decode_Ways.md
@@ -61,16 +61,13 @@ Constraints:
 
 ### Analyze
 
-* 567
-   * 5 6 7
-  * 56 不满足
-  * 5 67 不满足
+该题拆分子问题较为不易, 题目思路可以转化为:
 
-思路:
+* 下标为 start 的拆解之和等于
+  * 下标为 start + 1 的拆解之和
+  * 下标为 start + 2 的拆解之和(前提: [start, start + 2) 值合理)
 
-* '226' 拆解
-  * 2 + '26' 的拆解之和
-  * 22 + '6' 的拆解之和
+解法一: 记忆化递归
 
 ```js
 /**
@@ -78,29 +75,40 @@ Constraints:
  * @return {number}
  */
 var numDecodings = function(s) {
-  return judge(s, 0)
+  const cache = {}
+  return judge(s, 0, cache)
 }
 
-var judge = function(s, start) {
+var judge = function(s, start, cache) {
   const length = s.length
+  if (s[start] === '0') return 0
   if (start === s.length) {
-    return 0
+    return 1
   }
-  let count = 0
-  if (s[start] && isValidValue(s[start])) {
-    count++
-  }
-  if (s[start + 1] && isValidValue(s.slice(start, start + 1))) {
-    count++
-  }
+  if (cache[start]) return cache[start]
 
-  return count + judge(s, start + 1)
+  let res = judge(s, start + 1, cache)
+  if (isValidValue(s.slice(start, start + 2))) {
+    res += judge(s, start + 2, cache)
+  }
+  return cache[start] = res
 }
 
 var isValidValue = function(value) {
+  if (!value || value.length < 2) return false
   const valueToNum = Number(value)
-  return valueToNum !== 0
-    && (value.length === String(valueToNum).length)
-    && valueToNum <= 26
+  return valueToNum <= 26
+}
+```
+
+解法二: 动态规划
+
+```js
+/**
+ * @param {string} s
+ * @return {number}
+ */
+var numDecodings = function(s) {
+
 }
 ```
