--- a/LeetCode/91.Decode_Ways.md
+++ b/LeetCode/91.Decode_Ways.md
@@ -67,7 +67,7 @@ Constraints:
   * 下标为 start + 1 的拆解之和
   * 下标为 start + 2 的拆解之和(前提: [start, start + 2) 值合理)
 
-解法一: 记忆化递归
+解法一: 记忆化递归(可二刷)
 
 ```js
 /**
@@ -103,12 +103,33 @@ var isValidValue = function(value) {
 
 解法二: 动态规划
 
+* 当 start 位于 n 的 length - 1 时
+  * start + 1 与 start + 2 的拆解之和为: 0
+* 当 start 位于 n 的 length - 2 时
+  * start + 1 拆解之和为: 1
+* 当 start 位于 n 的 length - 3 时
+  * start + 1 拆解之和为: 1
+
+`226`
+
+
+
 ```js
 /**
  * @param {string} s
  * @return {number}
  */
 var numDecodings = function(s) {
+  const cache = {
+    [`${s.length}`]: 1,
+    [`${s.length - 1}`]: 0,
+    [`${s.length - 2}`]: s[s.length - 1] === '0' ? 0 : 1
+  }
 
+  for (let i = s.length - 3; i >= 0; i--) {
+    cache[i] = cache[i + 1] + cache[i + 2]
+  }
+
+  return cache['0']
 }
 ```
