--- a/LeetCode/91.Decode_Ways.md
+++ b/LeetCode/91.Decode_Ways.md
@@ -104,15 +104,11 @@ var isValidValue = function(value) {
 解法二: 动态规划
 
 * 当 start 位于 n 的 length - 1 时
-  * start + 1 与 start + 2 的拆解之和为: 0
+  * start + 1 与 start + 2 的拆解之和为: 1
 * 当 start 位于 n 的 length - 2 时
   * start + 1 拆解之和为: 1
 * 当 start 位于 n 的 length - 3 时
   * start + 1 拆解之和为: 1
-
-`226`
-
-
 
 ```js
 /**
@@ -120,16 +116,28 @@ var isValidValue = function(value) {
  * @return {number}
  */
 var numDecodings = function(s) {
-  const cache = {
-    [`${s.length}`]: 1,
-    [`${s.length - 1}`]: 0,
-    [`${s.length - 2}`]: s[s.length - 1] === '0' ? 0 : 1
+  if (s[0] === '0') {
+    return 0
   }
 
-  for (let i = s.length - 3; i >= 0; i--) {
-    cache[i] = cache[i + 1] + cache[i + 2]
+  const cache = {
+    [`${s.length}`]: 1
+  }
+
+  for (let i = s.length - 1; i >= 0; i--) {
+    cache[i] = cache[i + 1]
+
+    if (isValidValue(s.slice(i, i + 2))) {
+      cache[i] = cache[i] + cache[i + 2]
+    }
   }
 
   return cache['0']
+}
+
+var isValidValue = function(value) {
+  if (!value || value.length < 2) return false
+  const valueToNum = Number(value)
+  return valueToNum <= 26
 }
 ```
