--- a/LeetCode/62.Unique_Paths.md
+++ b/LeetCode/62.Unique_Paths.md
@@ -1,6 +1,50 @@
-### 思路
+### 62. Unique Paths
 
-动态规划, 当前位置的数字, 等于当前位置左边的数字 + 当前位置上边的数字。
+A robot is located at the top-left corner of a m x n grid (marked 'Start' in the diagram below).
+
+The robot can only move either `down or right` at any point in time. The robot is trying to reach the bottom-right corner of the grid (marked 'Finish' in the diagram below).
+
+How many possible unique paths are there?
+
+Example 1:
+
+![](https://assets.leetcode.com/uploads/2018/10/22/robot_maze.png)
+
+```js
+Input: m = 3, n = 7
+Output: 28
+```
+
+Example 2:
+
+```js
+Input: m = 3, n = 2
+Output: 3
+```
+
+Explanation:
+From the top-left corner, there are a total of 3 ways to reach the bottom-right corner:
+1. Right -> Down -> Down
+2. Down -> Down -> Right
+3. Down -> Right -> Down
+
+Example 3:
+
+```js
+Input: m = 7, n = 3
+Output: 28
+```
+
+Example 4:
+
+```js
+Input: m = 3, n = 3
+Output: 6
+```
+
+* Constraints:
+  * 1 <= m, n <= 100
+  * It's guaranteed that the answer will be less than or equal to 2 * 109.
 
 ### Analyze
 
@@ -26,3 +70,46 @@ var uniquePaths = function (m, n) {
   }
 }
 ```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+```js
+/**
+ * @param {number} m
+ * @param {number} n
+ * @return {number}
+ */
+var uniquePaths = function(m, n) {
+  const cache = {
+    [`${m - 1}_${n - 1}`]: 1
+  }
+  for (let x = m - 1; x >= 0; x--) {
+    for (let y = n - 1; y >= 0; y--) {
+      if (y + 1 === n) {
+        cache[`${x}${y}`] = cache[`${x + 1}${y}`]
+      } else if (x + 1 === m) {
+        cache[`${x}${y}`] = cache[`${x}${y + 1}`]
+      } else {
+        cache[`${x}${y}`] = cache[`${x}${y + 1}`] + cache[`${x + 1}${y}`]
+      }
+    }
+  }
+  return cache['0_0']
+}
+```
+
+3, 7
