--- a/LeetCode/91.Decode_Ways.md
+++ b/LeetCode/91.Decode_Ways.md
@@ -103,12 +103,7 @@ var isValidValue = function(value) {
 
 解法二: 动态规划
 
-* 当 start 位于 n 的 length - 1 时
-  * start + 1 与 start + 2 的拆解之和为: 1
-* 当 start 位于 n 的 length - 2 时
-  * start + 1 拆解之和为: 1
-* 当 start 位于 n 的 length - 3 时
-  * start + 1 拆解之和为: 1
+cache[i] 表示第 i 位上有几种拆解方法。
 
 ```js
 /**
@@ -125,10 +120,14 @@ var numDecodings = function(s) {
   }
 
   for (let i = s.length - 1; i >= 0; i--) {
-    cache[i] = cache[i + 1]
+    if (s.slice(i, i + 1) === '0') {
+      cache[i] = 0
+    } else {
+      cache[i] = cache[i + 1]
 
-    if (isValidValue(s.slice(i, i + 2))) {
-      cache[i] = cache[i] + cache[i + 2]
+      if (isValidValue(s.slice(i, i + 2))) {
+        cache[i] = cache[i] + cache[i + 2]
+      }
     }
   }
 
