--- a/LeetCode/62.Unique_Paths.md
+++ b/LeetCode/62.Unique_Paths.md
@@ -48,6 +48,8 @@ Output: 6
 
 ### Analyze
 
+记忆回溯法:
+
 ```js
 const cache = {}
 /**
@@ -71,21 +73,7 @@ var uniquePaths = function (m, n) {
 }
 ```
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+动态规划法
 
 ```js
 /**
@@ -99,17 +87,18 @@ var uniquePaths = function(m, n) {
   }
   for (let x = m - 1; x >= 0; x--) {
     for (let y = n - 1; y >= 0; y--) {
+      if (x === m - 1 && y === n - 1) {
+        continue
+      }
       if (y + 1 === n) {
-        cache[`${x}${y}`] = cache[`${x + 1}${y}`]
+        cache[`${x}_${y}`] = cache[`${x + 1}_${y}`]
       } else if (x + 1 === m) {
-        cache[`${x}${y}`] = cache[`${x}${y + 1}`]
+        cache[`${x}_${y}`] = cache[`${x}_${y + 1}`]
       } else {
-        cache[`${x}${y}`] = cache[`${x}${y + 1}`] + cache[`${x + 1}${y}`]
+        cache[`${x}_${y}`] = cache[`${x}_${y + 1}`] + cache[`${x + 1}_${y}`]
       }
     }
   }
   return cache['0_0']
 }
 ```
-
-3, 7
