--- a/BasicSkill/设计模式/单例模式.md
+++ b/BasicSkill/设计模式/单例模式.md
@@ -54,11 +54,11 @@ const createLoginLayer = function() {
 }
 ```
 
-使单例模式和创建弹框代码解耦
+使单例模式与创建弹框代码解耦
 
 ```js
 const getSingle = function(fn) {
-  const result
+  let result
   return function() {
     return result || result = fn.apply(this, arguments)
   }
