--- a/BasicSkill/设计模式/单例模式.md
+++ b/BasicSkill/设计模式/单例模式.md
@@ -54,13 +54,13 @@ const createLoginLayer = function() {
 }
 ```
 
-使单例模式与创建弹框代码解耦
+使用单例模式将创建弹框代码解耦, 代码如下:
 
 ```js
 const getSingle = function(fn) {
   let result
   return function() {
-    return result || result = fn.apply(this, arguments)
+    return result || (result = fn.apply(this, arguments))
   }
 }
 ```
