--- a/LeetCode/62.Unique_Paths.md
+++ b/LeetCode/62.Unique_Paths.md
@@ -48,7 +48,7 @@ Output: 6
 
 ### Analyze
 
-记忆回溯法:
+记忆递归法:
 
 ```js
 const cache = {}
@@ -73,7 +73,7 @@ var uniquePaths = function (m, n) {
 }
 ```
 
-动态规划法
+动态规划法:
 
 ```js
 /**
@@ -102,3 +102,7 @@ var uniquePaths = function(m, n) {
   return cache['0_0']
 }
 ```
+
+### Similar Title
+
+63
