--- a/LeetCode/215.Kth_Largest_Element_in_an_Array.md
+++ b/LeetCode/215.Kth_Largest_Element_in_an_Array.md
@@ -1,4 +1,4 @@
-### 题目
+### 215.Kth Largest Element in an Array
 
 在`未排序的数组中`找到第 k 个最大的元素。请注意，你需要找的是数组排序后的第 k 个最大的元素，而不是第 k 个不同的元素。
 
@@ -35,6 +35,8 @@ var findKthLargest = function(nums, k) {
   return nums[k - 1]
 }
 ```
+
+> 如果初始数据的元素个数不确定, 解法一就无法使用了, 这个时候适合使用解法二。
 
 解法二: 快速选择
 
