books: 写给大家看的设计书

--- a/BasicSkill/life/books/写给大家看的设计书.md
+++ b/BasicSkill/life/books/写给大家看的设计书.md
@@ -1,9 +1,10 @@
 ### 4 大基本原则
 
 * `亲密性`
-  * 目的: 实现组织性;
+  * 目的: 实现`组织性`;
   * 实现方式: 将相关联的元素分在一组以建立更近的亲密性。
 * `对齐`
+  * 目的: 使页面`统一而有条理`;
   * 优先使用`左对齐`、`右对齐`而不是`居中对齐`。
-* `对比`
 * `重复`
+* `对比`
