--- a/BasicSkill/life/books/写给大家看的设计书.md
+++ b/BasicSkill/life/books/写给大家看的设计书.md
@@ -3,8 +3,13 @@
 * `亲密性`
   * 目的: 实现`组织性`;
   * 实现方式: 将相关联的元素分在一组以建立更近的亲密性。
+  * 要避免的问题: 一个页面上有太多孤立的元素。
 * `对齐`
   * 目的: 使页面`统一而有条理`;
-  * 优先使用`左对齐`、`右对齐`而不是`居中对齐`。
+  * 要避免的问题: 要避免在页面上混合使用多种对齐方式。优先使用`左对齐`、`右对齐`而不是`居中对齐`。
 * `重复`
+  * 目的: 使页面`统一`, 并增强视觉效果。
+  * 实现方式: 把现有的一致性更向前推进一步。最初, 可以只是找出现有的重复, 然后将其加强。熟悉了这种思想之后, 再开始创建新的重复元素。
+  * 要避免的问题: 要避免太多地重复一个元素。
 * `对比`
+  * 目的: `增强页面的效果`; 有助于信息的`组织`;
