docs: colors practice

--- a/BasicSkill/life/books/写给大家看的设计书.md
+++ b/BasicSkill/life/books/写给大家看的设计书.md
@@ -1,4 +1,4 @@
-### 4 大基本原则
+### 四大基本原则
 
 * `亲密性`
   * 目的: 实现`组织性`;
@@ -13,3 +13,26 @@
   * 要避免的问题: 要避免太多地重复一个元素。
 * `对比`
   * 目的: `增强页面的效果`; 有助于信息的`组织`;
+
+### 颜色运用
+
+* `色轮`
+  * `概念`
+    * `三原色`: 红、黄、蓝
+    * `三间色`
+    * `第三色`
+  * `关系`
+    * `互补`
+    * `三色组`
+    * `分裂互补三色组`
+    * `类似色`
+  * `亮色与暗色`
+    * 亮色: 加白
+    * 暗色: 加黑
+  * `单色`
+  * `暖色与冷色`
+    * 暖色: 加红、加黄
+    * 冷色: 加蓝
+
+* `CMYK`: Cyan(青)、Magenta(品红)、Yellow、Key(通常是黑色)
+* `RGB`
