--- a/BasicSkill/life/books/写给大家看的设计书.md
+++ b/BasicSkill/life/books/写给大家看的设计书.md
@@ -26,6 +26,7 @@
     * `三色组`
     * `分裂互补三色组`
     * `类似色`
+    * > 采用以上几种关系的颜色都会比较和谐。
   * `亮色与暗色`
     * 亮色: 加白
     * 暗色: 加黑
@@ -35,4 +36,8 @@
     * 冷色: 加蓝
 
 * `CMYK`: Cyan(青)、Magenta(品红)、Yellow、Key(通常是黑色)
+  * 原理: 光反射
+  * 应用: 印刷品
 * `RGB`
+  * 原理: 显示器直接传入眼睛的光
+  * 应用: 显示器
