--- a/BasicSkill/life/books/写给大家看的设计书.md
+++ b/BasicSkill/life/books/写给大家看的设计书.md
@@ -12,7 +12,7 @@
   * 实现方式: 把现有的一致性更向前推进一步。最初, 可以只是找出现有的重复, 然后将其加强。熟悉了这种思想之后, 再开始创建新的重复元素。
   * 要避免的问题: 要避免太多地重复一个元素。
 * `对比`
-  * 目的: `增强页面的效果`; 有助于信息的`组织`;
+  * 目的: `增强页面的效果`, 有助于信息的`组织`;
 
 ### 颜色运用
 
