--- a/BasicSkill/life/books/写给大家看的设计书.md
+++ b/BasicSkill/life/books/写给大家看的设计书.md
@@ -41,3 +41,20 @@
 * `RGB`
   * 原理: 显示器直接传入眼睛的光
   * 应用: 显示器
+
+### 字体设计
+
+* 字体
+  * 特殊符号
+    * 开单引号 `‘`: option + ]
+    * 闭单引号 `’`: option + shift + ]
+    * 开双引号 `“`: option + [
+    * 闭双引号 `”`: option + shift + [
+    * 一字线 `–`: option + -
+    * 破折号 `—`: option + shift + -
+    * 省略号 `…`: option + ;
+    * 分数斜线 `1⁄2`: option + shift + !
+    * 按下 `fn` 打开字符检查器
+  * 重音符号: 按下 fn 打开字符检查器, 选择左侧边栏上的拉丁语打卡重音符号列表
+* 字体类别
+* 字体对比
