--- a/BasicSkill/life/books/写给大家看的设计书.md
+++ b/BasicSkill/life/books/写给大家看的设计书.md
@@ -56,5 +56,14 @@
     * 分数斜线 `1⁄2`: option + shift + !
     * 按下 `fn` 打开字符检查器
   * 重音符号: 按下 fn 打开字符检查器, 选择左侧边栏上的拉丁语打卡重音符号列表
-* 字体类别
+* `字体类别`
+  * 字体间的关系
+    * 协调
+    * 冲突(通常由相似的字体造成)
+    * 对比
+      * Todo: 大小、粗细、结构、形状、方向、颜色
+  * 种类
+    * `Oldstyle`(旧式体)
+      * ![](http://with.muyunyun.cn/af9d00410581710e48fdd2b4854c84b5.jpg)
 * 字体对比
+
