--- a/BasicSkill/life/books/写给大家看的设计书.md
+++ b/BasicSkill/life/books/写给大家看的设计书.md
@@ -65,5 +65,12 @@
   * 种类
     * `Oldstyle`(旧式体)
       * ![](http://with.muyunyun.cn/af9d00410581710e48fdd2b4854c84b5.jpg)
+      * 使用场景: 大量文本
+    * `Mordern`(现代体)
+    * `Slab serif`(粗衬线体)
+      * 使用场景: 儿童图书
+    * `Sans serif`(无衬线体)
+    * `Script`(手写体)
+    * `Decorative`(花体)
 * 字体对比
 
