--- a/LeetCode/198.House_Robber.md
+++ b/LeetCode/198.House_Robber.md
@@ -1,6 +1,6 @@
 ### 198.House Robber
 
-You are a professional robber planning to rob houses along a street. Each house has a certain amount of money stashed, the only constraint stopping you from robbing each of them is that adjacent houses have security systems connected and it will automatically contact the police if two adjacent houses were broken into on the same night.
+You are a professional robber planning to rob houses along a street. Each house has a certain amount of money stashed, the only constraint stopping you from robbing each of them is that `adjacent houses have security systems connected` and it will automatically contact the police if two adjacent houses were broken into on the same night.
 
 Given an integer array nums representing the amount of money of each house, return the maximum amount of money you can rob tonight without alerting the police.
 
@@ -30,12 +30,21 @@ Total amount you can rob = 2 + 9 + 1 = 12.
 
 ### Analyze
 
+思考🤔: `curNode 最大值` = `curNode 最大值` + Math.max(`curNode + 2 最大值`, `curNode + 3 最大值`, ...)
+
 ```js
 /**
  * @param {number[]} nums
  * @return {number}
  */
 var rob = function(nums) {
+  let sum = 0
+  for (let i = 0; i < nums.length; i++) {
+    sum = sum + Math.max(, )
+  }
 
+  return sum
 }
 ```
+
+考虑偷取 [0...x] 方位内的房子
