--- a/LeetCode/198.House_Robber.md
+++ b/LeetCode/198.House_Robber.md
@@ -33,6 +33,17 @@ Total amount you can rob = 2 + 9 + 1 = 12.
 思考🤔: `curNode 最大值` = `curNode 最大值` + Math.max(`curNode + 2 最大值`, `curNode + 3 最大值`, ...)
 
 ```js
+                                [0, n - 1]
+                            /       |  ...       \             \
+                    [2, n - 1]     [3, n - 1]    [4, n - 1]  ...  [n - 1]
+              /
+      [4, n - 1]: 此时找到了重复子项
+```
+
+* 状态的定义(即函数的定义): 考虑偷取 `[m, n - 1]` 范围内的房子
+* 状态转移: f(0) = Math.max(v(0) + f(2), v(1) + f(3), v(2) + f(4), ..., v(n - 3) + f(n - 1), v(n - 2), v(n - 1))
+
+```js
 /**
  * @param {number[]} nums
  * @return {number}
@@ -48,3 +59,7 @@ var rob = function(nums) {
 ```
 
 考虑偷取 [0...x] 方位内的房子
+
+
+组合问题
+
