--- a/BasicSkill/life/books/写给大家看的设计书.md
+++ b/BasicSkill/life/books/写给大家看的设计书.md
@@ -61,7 +61,7 @@
     * 协调
     * 冲突(通常由相似的字体造成)
     * 对比
-      * Todo: 大小、粗细、结构、形状、方向、颜色
+      * 大小、粗细、结构(衬线体/无衬线体)、形状(大小写)、方向、颜色
   * 种类
     * `Oldstyle`(旧式体)
       * ![](http://with.muyunyun.cn/af9d00410581710e48fdd2b4854c84b5.jpg)
@@ -77,4 +77,6 @@
   * 全大写 vs 全小写
   * 罗马体 vs 斜体
     * 罗马体表示所有字体中从上到下竖直的字体
+  * 方向对比
+  * 颜色对比
 
