--- a/LeetCode/198.House_Robber.md
+++ b/LeetCode/198.House_Robber.md
@@ -30,7 +30,7 @@ Total amount you can rob = 2 + 9 + 1 = 12.
 
 ### Analyze
 
-思考🤔: `curNode 最大值` = `curNode 最大值` + Math.max(`curNode + 2 最大值`, `curNode + 3 最大值`, ...)
+思考🤔:
 
 ```js
                                 [0, n - 1]
@@ -40,8 +40,10 @@ Total amount you can rob = 2 + 9 + 1 = 12.
       [4, n - 1]: 此时找到了重复子项
 ```
 
-* 状态的定义(即函数的定义): 考虑偷取 `[m, n - 1]` 范围内的房子
-* 状态转移: f(0) = `Math.max(v(0) + f(2), v(1) + f(3), v(2) + f(4), ..., v(n - 3) + f(n - 1), v(n - 2), v(n - 1))`
+* `状态的定义`(即函数的定义): 考虑偷取 `[m, n - 1]` 范围内的房子
+* `状态转移`: f(0) = `Math.max(v(0) + f(2), v(1) + f(3), v(2) + f(4), ..., v(n - 3) + f(n - 1), v(n - 2), v(n - 1))`
+
+记忆化递归:
 
 ```js
 /**
@@ -49,16 +51,16 @@ Total amount you can rob = 2 + 9 + 1 = 12.
  * @return {number}
  */
 var rob = function(nums) {
-  return find(nums, {})
+  return find(nums, {}, 0)
 }
 
-var find = function(nums, cache) {
-  if (typeof nums[0] !== 'number') return 0
+var find = function(nums, cache, start) {
+  if (typeof nums[start] !== 'number') return 0
   const length = nums.length
   let sum = 0
-  for (let i = 0; i < length; i++) {
+  for (let i = start; i < length; i++) {
     if (typeof cache[i] !== 'number') {
-      cache[i] = rob(nums.slice(i + 2, length), cache)
+      cache[i] = find(nums, cache, i + 2)
     }
     sum = Math.max(sum, nums[i] + cache[i])
   }
@@ -66,8 +68,19 @@ var find = function(nums, cache) {
 }
 ```
 
-50 / 68 个通过测试用例
-状态：超出时间限制
-提交时间：几秒前
-最后执行的输入：
-[104,209,137,52,158,67,213,86,141,110,151,127,238,147,169,138,240,185,246,225,147,203,83,83,131,227,54,78,165,180,214,151,111,161,233,147,124,143]
+动态规划:
+
+```js
+/**
+ * @param {number[]} nums
+ * @return {number}
+ */
+var rob = function(nums) {
+  const length = nums.length
+  const v0 = nums[length - 1]
+  const v1 = nums[length - 2]
+  for (let i = 2; i < length; i++) {
+
+  }
+}
+```
