--- a/LeetCode/198.House_Robber.md
+++ b/LeetCode/198.House_Robber.md
@@ -70,17 +70,36 @@ var find = function(nums, cache, start) {
 
 动态规划:
 
+* `状态的定义`(即函数的定义): 考虑偷取 `[m, n - 1]` 范围内的房子
+* `状态转移`: f(0) = `Math.max(v(0) + f(2), v(1) + f(3), v(2) + f(4), ..., v(n - 3) + f(n - 1), v(n - 2), v(n - 1))`
+
+
+```js
+Input: nums = [2,7,9,3,1]
+Output: 12
+```
+
+{
+  4: 1,
+  3:
+}
+
 ```js
 /**
  * @param {number[]} nums
  * @return {number}
  */
 var rob = function(nums) {
+  // if (typeof nums[0] !== 'number') return 0
+  // if (typeof nums[1] !== 'number') return nums[0]
   const length = nums.length
-  const v0 = nums[length - 1]
-  const v1 = nums[length - 2]
-  for (let i = 2; i < length; i++) {
-
+  const cache = {
+    // 0: nums[length - 1],
+    // 1: nums[length - 2]
+  }
+  for (let i = length - 1; i >= 0; i--) {
+    // todo:
+    cache[i] = nums[i] + cache[i + 2] || 0
   }
 }
 ```
