--- a/LeetCode/198.House_Robber.md
+++ b/LeetCode/198.House_Robber.md
@@ -70,36 +70,23 @@ var find = function(nums, cache, start) {
 
 动态规划:
 
-* `状态的定义`(即函数的定义): 考虑偷取 `[m, n - 1]` 范围内的房子
-* `状态转移`: f(0) = `Math.max(v(0) + f(2), v(1) + f(3), v(2) + f(4), ..., v(n - 3) + f(n - 1), v(n - 2), v(n - 1))`
-
-
-```js
-Input: nums = [2,7,9,3,1]
-Output: 12
-```
-
-{
-  4: 1,
-  3:
-}
-
 ```js
 /**
  * @param {number[]} nums
  * @return {number}
  */
 var rob = function(nums) {
-  // if (typeof nums[0] !== 'number') return 0
-  // if (typeof nums[1] !== 'number') return nums[0]
   const length = nums.length
-  const cache = {
-    // 0: nums[length - 1],
-    // 1: nums[length - 2]
-  }
+  const cache = {}
+  let max = 0
   for (let i = length - 1; i >= 0; i--) {
-    // todo:
-    cache[i] = nums[i] + cache[i + 2] || 0
+    for (let m = i; m <= length - 1; m++) {
+      if (typeof cache[m] !== 'number') {
+        cache[m] = Math.max(nums[m] + (cache[m + 2] || 0), cache[m + 1] || 0)
+      }
+      max = Math.max(max, cache[m])
+    }
   }
+  return max
 }
 ```
