--- a/React/Component_Design/主题色替换方案.md
+++ b/React/Component_Design/主题色替换方案.md
@@ -134,9 +134,9 @@ $theme-color: #1199ee !default;
 
 #### 关于悬浮态
 
-> 悬浮态颜色变浅: hover 相当于 button 被你的鼠标吸起来了，所以上升后离光源更近，所以变白了。（类似前面某位同学提到的：距离越近越亮
+悬浮态颜色变浅: hover 相当于按钮被鼠标吸起来了，所以上升后离光源更近，所以变白了。（类似前面某位同学提到的：距离越近越亮
 
-> 悬浮态颜色变深: 特别是有的商家/客服显示器很差，Hover 上去底色变亮了字是白的，可能有些情况影响识别度
+悬浮态颜色变深: 商家/客服显示器很差，Hover 上去底色变亮了字是白的，有些情况影响识别度
 
 ### 参阅资料
 
