--- a/LeetCode/213.House_Robber_II.md
+++ b/LeetCode/213.House_Robber_II.md
@@ -1,6 +1,6 @@
 ### 213.House_Robber_II
 
-You are a professional robber planning to rob houses along a street. Each house has a certain amount of money stashed. All houses at this place are `arranged in a circle`. That means the first house is the neighbor of the last one. Meanwhile, adjacent houses have a security system connected, and it will automatically contact the police if two adjacent houses were broken into on the same night.
+You are a professional robber planning to rob houses along a street. Each house has a certain amount of money stashed. All houses at this place are `arranged in a circle`. That means `the first house is the neighbor of the last one`. Meanwhile, adjacent houses have a security system connected, and it will automatically contact the police if two adjacent houses were broken into on the same night.
 
 Given an integer array nums representing the amount of money of each house, return the maximum amount of money you can rob tonight without alerting the police.
 
@@ -37,14 +37,14 @@ Constraints:
 思考🤔:
 
 ```js
-                                [0, n - 1]
-                            /       |  ...       \             \
-                    [2, n - 1]     [3, n - 1]    [4, n - 1]  ...  [n - 1]
-              /
-      [4, n - 1]: 此时找到了重复子项
+                                    [0, n - 2] || [1, n - 1]
+            /        |  ...      \                                      /        |  ...      \
+      [2, n - 2]     [3, n - 2]  ...  [n - 2]                 [3, n - 1]     [4, n - 1]  ...  [n - 1]
+      /
+[4, n - 2]: 此时找到了重复子项
 ```
 
-* `状态的定义`(即函数的定义): 考虑偷取 `[m, n - 1]` 范围内的房子
+* `状态的定义`(即函数的定义): 考虑偷取 `[m, n - 2] || [z, n - 1]` 范围内的房子
 * `状态转移`: f(0) = `Math.max(v(0) + f(2), v(1) + f(3), v(2) + f(4), ..., v(n - 3) + f(n - 1), v(n - 2), v(n - 1))`
 
 ```js
