--- a/React/相关技术栈/富文本编辑器.md
+++ b/React/相关技术栈/富文本编辑器.md
@@ -57,7 +57,7 @@ requestAnimationFrame(() => {
 })
 ```
 
-### web excel
+### Web Excel
 
 * Google Sheets
 * Office 365
@@ -78,6 +78,38 @@ requestAnimationFrame(() => {
     * 分层渲染管线
     * 双缓冲画布, 支持流畅的滚动
     * 自研排版引擎
+
+### 协同编辑
+
+* [etherpad-lite](https://github.com/ether/etherpad-lite)
+  * 基于 OT 开发的从底层支持协同编辑的框架。
+  * 代表: 飞书、石墨
+  * 问题: 十年前代码、技术栈陈旧
+  * 核心方法:
+    * apply
+    * compose
+    * follow: 解决两个 changeset 冲突问题
+    * inverse: 反操作, undo
+* Changeset
+  * 代表对文档的一次修改
+  * eg: Z:4>1=1*0+1$2
+    * Z: 代表是一个 Changeset
+    * 4>1: 源文档 4 个字符长度, 本次修改增加一个字符
+    * =1: 跳过第一个字符
+    * *0+1: 插入一个字符, 并且带上属性 0
+    * $2: 插入的具体字符
+  * [Changeset Iterator](https://github.com/marcelklehr/changesets), 解析上述 Changeset 的库
+* 渲染流程
+  * 内联属性
+  * 行属性: 标题
+  * 块属性: 图片
+
+* 问题一: follow 为什么要对 A 与 B 都要处理, 可否只对一处进行处理?
+* 问题二: etherpad-lite 服务端与客户端协同的处理? (要有一个 master)
+   1. 服务端设置为 true
+   2. 客户端设置为 false
+* 问题三:
+  * 弱网情况下, 如何优化协同问题? (比如输入拼音, 被截断, 无法删除)
 
 ### link
 
