--- a/React/Component_Design/主题色替换方案.md
+++ b/React/Component_Design/主题色替换方案.md
@@ -142,3 +142,10 @@ $theme-color: #1199ee !default;
 
 * [聊一聊前端换肤](https://juejin.im/post/5ca41617f265da3092006155)
 * [Ant Design 色板生成算法演进之路](https://zhuanlan.zhihu.com/p/32422584)
+
+### CSS Variable
+
+TODO:
+
+* 全局/局部变量
+  * 或逻辑: var(--a, var(--b))
