--- a/LeetCode/213.House_Robber_II.md
+++ b/LeetCode/213.House_Robber_II.md
@@ -38,8 +38,8 @@ Constraints:
 
 ```js
                                     [0, n - 2] || [1, n - 1]
-            /        |  ...      \                                      /        |  ...      \
-      [2, n - 2]     [3, n - 2]  ...  [n - 2]                 [3, n - 1]     [4, n - 1]  ...  [n - 1]
+            /        |          \          \                                  /        |  ...      \
+      [2, n - 2]   [3, n - 2]  [4, n - 2]    ...   [n - 2]                 [3, n - 1]     [4, n - 1]  ...  [n - 1]
       /
 [4, n - 2]: 此时找到了重复子项
 ```
@@ -55,4 +55,8 @@ Constraints:
 var rob = function(nums) {
 
 };
+
+var robPosition = function(start, end) {
+
+}
 ```
