--- a/LeetCode/213.House_Robber_II.md
+++ b/LeetCode/213.House_Robber_II.md
@@ -34,7 +34,7 @@ Constraints:
 
 ### Analyze
 
-思考🤔:
+思考🤔: 4 2 3 5 拆成 4 2 3 以及 2 3 5 两种情形。如此便将其转化为题目 [198.House Robber](https://github.com/MuYunyun/blog/blob/main/LeetCode/198.House_Robber.md)
 
 ```js
                                     [0, n - 2] || [1, n - 1]
@@ -53,10 +53,19 @@ Constraints:
  * @return {number}
  */
 var rob = function(nums) {
+  const nums1 = nums.slice(0, nums.length - 1)
+  const nums2 = nums.slice(1, nums.length)
+  return Math.max(robPosition(nums1, 0, {}), robPosition(nums2, 0, {}))
+}
 
-};
+var robPosition = function(nums, start, cache) {
+  let sum = 0
 
-var robPosition = function(start, end) {
+  for (let i = 0; i < nums.length; i++) {
+    const maxRobPosition = robPosition(nums, i ,)
+    sum = Math.max(sum, nums[i] + )
+  }
 
+  return sum
 }
 ```
