--- a/LeetCode/213.House_Robber_II.md
+++ b/LeetCode/213.House_Robber_II.md
@@ -34,7 +34,7 @@ Constraints:
 
 ### Analyze
 
-思考🤔: 4 2 3 5 拆成 4 2 3 以及 2 3 5 两种情形。如此便将其转化为题目 [198.House Robber](https://github.com/MuYunyun/blog/blob/main/LeetCode/198.House_Robber.md)
+思考🤔: 将 4 2 3 5 拆成 4 2 3 与 2 3 5 两种情形。如此便将其转化为题目 [198.House Robber](https://github.com/MuYunyun/blog/blob/main/LeetCode/198.House_Robber.md)
 
 ```js
                                     [0, n - 2] || [1, n - 1]
@@ -47,12 +47,17 @@ Constraints:
 * `状态的定义`(即函数的定义): 考虑偷取 `[m, n - 2] || [z, n - 1]` 范围内的房子
 * `状态转移`: f(0) = `Math.max(v(0) + f(2), v(1) + f(3), v(2) + f(4), ..., v(n - 3) + f(n - 1), v(n - 2), v(n - 1))`
 
+递归:
+
 ```js
 /**
  * @param {number[]} nums
  * @return {number}
  */
 var rob = function(nums) {
+  if (nums.length === 1) {
+    return nums[0]
+  }
   const nums1 = nums.slice(0, nums.length - 1)
   const nums2 = nums.slice(1, nums.length)
   return Math.max(robPosition(nums1, 0, {}), robPosition(nums2, 0, {}))
@@ -61,11 +66,66 @@ var rob = function(nums) {
 var robPosition = function(nums, start, cache) {
   let sum = 0
 
-  for (let i = 0; i < nums.length; i++) {
-    const maxRobPosition = robPosition(nums, i ,)
-    sum = Math.max(sum, nums[i] + )
+  if (typeof nums[start] !== 'number') return 0
+  for (let i = start; i < nums.length; i++) {
+    if (typeof cache[i] !== 'number') {
+      cache[i] = robPosition(nums, i + 2, cache)
+    }
+    sum = Math.max(sum, nums[i] + cache[i])
   }
 
   return sum
 }
+```
+
+动态规划:
+
+[4, 2, 5, 6]
+
+```js
+/**
+ * @param {number[]} nums
+ * @return {number}
+ */
+var rob = function(nums) {
+  if (nums.length === 0) return 0
+  if (nums.length === 1) {
+    return nums[0]
+  }
+  let sum = 0
+  const nums1 = nums.slice(0, nums.length - 1)
+  const nums2 = nums.slice(1, nums.length)
+  // return Math.max(robPosition(nums1, 0, {}), robPosition(nums2, 0, {}))
+  const lastDigit = nums[nums.length - 1]
+  const lastSecondDigit = nums[nums.length - 2]
+  const cache = {
+    0: nums[nums.length - 1],
+    1: lastDigit < lastSecondDigit ? lastSecondDigit : lastDigit
+  }
+  for (let i = 2; i < nums.length; i++) {
+    if (typeof cache[i] !== 'number') {
+      cache[i] = 0
+      for () {
+
+      }
+    }
+    sum = Math.max(sum, cache[i])
+  }
+
+  return sum
+}
+
+// var robPosition = function(nums, start, cache) {
+//   let sum = 0
+
+//   if (typeof nums[start] !== 'number') return 0
+//   for (let i = start; i < nums.length; i++) {
+//     if (typeof cache[i] !== 'number') {
+//       cache[i] = robPosition(nums, i + 2, cache)
+//     }
+//     sum = Math.max(sum, nums[i] + cache[i])
+//   }
+
+//   return sum
+// }
 ```
