--- a/LeetCode/213.House_Robber_II.md
+++ b/LeetCode/213.House_Robber_II.md
@@ -67,6 +67,7 @@ var robPosition = function(nums, start, cache) {
   let sum = 0
 
   if (typeof nums[start] !== 'number') return 0
+  // the for loop can be optimized here.
   for (let i = start; i < nums.length; i++) {
     if (typeof cache[i] !== 'number') {
       cache[i] = robPosition(nums, i + 2, cache)
@@ -80,8 +81,6 @@ var robPosition = function(nums, start, cache) {
 
 动态规划:
 
-[4, 2, 5, 6]
-
 ```js
 /**
  * @param {number[]} nums
@@ -92,40 +91,30 @@ var rob = function(nums) {
   if (nums.length === 1) {
     return nums[0]
   }
-  let sum = 0
+  if (nums.length === 2) {
+    return Math.max(nums[0], nums[1])
+  }
   const nums1 = nums.slice(0, nums.length - 1)
   const nums2 = nums.slice(1, nums.length)
-  // return Math.max(robPosition(nums1, 0, {}), robPosition(nums2, 0, {}))
+  return Math.max(robPosition(nums1), robPosition(nums2))
+}
+
+var robPosition = (nums) => {
   const lastDigit = nums[nums.length - 1]
   const lastSecondDigit = nums[nums.length - 2]
   const cache = {
-    0: nums[nums.length - 1],
-    1: lastDigit < lastSecondDigit ? lastSecondDigit : lastDigit
+    0: lastDigit,
+    1: Math.max(lastSecondDigit, lastDigit)
   }
+  let sum = Math.max(lastSecondDigit, lastDigit)
   for (let i = 2; i < nums.length; i++) {
     if (typeof cache[i] !== 'number') {
-      cache[i] = 0
-      for () {
-
-      }
+      const point = nums.length - (i + 1)
+      cache[i] = Math.max(nums[point] + cache[i - 2], cache[i - 1])
     }
     sum = Math.max(sum, cache[i])
   }
 
   return sum
 }
-
-// var robPosition = function(nums, start, cache) {
-//   let sum = 0
-
-//   if (typeof nums[start] !== 'number') return 0
-//   for (let i = start; i < nums.length; i++) {
-//     if (typeof cache[i] !== 'number') {
-//       cache[i] = robPosition(nums, i + 2, cache)
-//     }
-//     sum = Math.max(sum, nums[i] + cache[i])
-//   }
-
-//   return sum
-// }
 ```
