--- a/React/源码分析/位运算符.md
+++ b/React/源码分析/位运算符.md
@@ -1,6 +1,6 @@
 ### 位运算符
 
-小数和 0 使用或运算符能得到对应的整数。这个知识点在计算 `expirationTime` 中有用到。
+小数和 0 使用位运算符能得到对应的整数。这个知识点在计算 `expirationTime` 中有用到。
 
 ```js
 1.1 | 0 => 1
@@ -38,3 +38,7 @@ var context = NoContext | ConcurrentMode | StrictMode // 3
 context & ConcurrentMode // 1
 context & StrictMode // 2
 ```
+
+### 相关链接
+
+* [位运算符在 JS 中的妙用](https://juejin.cn/post/6844903568906911752)
