ts: more on function

--- a/React/Component_Design/重新认识受控与非受控组件.md
+++ b/React/Component_Design/重新认识受控与非受控组件.md
@@ -110,20 +110,20 @@ function Demo() {
 // 组件提供方
 function Input({ defaultValue }) {
   // 反模式
-  const [value, setValue] = React.useState(defaultValue);
+  const [value, setValue] = React.useState(defaultValue)
   React.useEffect(() => {
-    setValue(defaultValue);
-  }, [defaultValue]);
-  return <input value={value} onChange={e => setValue(e.target.value)} />;
+    setValue(defaultValue)
+  }, [defaultValue])
+  return <input value={value} onChange={e => setValue(e.target.value)} />
 }
 
 // 调用方
 function Demo({ defaultValue }) {
-  return <Input defaultValue={defaultValue} />;
+  return <Input defaultValue={defaultValue} />
 }
 
 function App() {
-  const [tab, setTab] = React.useState(1);
+  const [tab, setTab] = React.useState(1)
   return (
     <>
       {tab === 1 ? <Demo defaultValue={1} /> : <Demo defaultValue={1} />}
@@ -131,7 +131,7 @@ function App() {
         切换 Tab
       </button>
     </>
-  );
+  )
 }
 ```
 
